@@ -61,8 +61,8 @@ public class StringTagger {
    * @param sentence The input sentence
    */
   private void filterPreProcess(Sentence sentence) {
-    for (StreamFilter filter : filterList) {
-      filter.preProcess(sentence);
+    for (int i = 0; i < filterList.size(); i++) {
+      filterList.get(i).preProcess(sentence);
     }
   }
   
@@ -105,15 +105,23 @@ public class StringTagger {
    * @return An array of {@link Token}s representing the most likely morphemes
    * @throws IOException 
    */
-  public List<Token> analyze(String surface) throws IOException {
+  public List<Token> analyze(String surface, List<Token> reuse) throws IOException {
     Sentence sentence = new Sentence(surface.toCharArray());
     filterPreProcess(sentence);
     
-    List<Token> tokens = viterbi.getBestTokens(sentence);
+    List<Token> tokens = viterbi.getBestTokens(sentence, reuse);
     
     tokens = filterPostProcess(tokens);
     
     return tokens;
+  }
+  
+  /**
+   * @deprecated use {@link #analyze(String, List)} instead.
+   */
+  @Deprecated
+  public List<Token> analyze(String surface) throws IOException {
+    return analyze(surface, new ArrayList<Token>());
   }
   
   /**
@@ -123,15 +131,23 @@ public class StringTagger {
    * @return An array of {@link Token}s representing the most likely morphemes
    * @throws IOException 
    */
-  public List<Token> analyze(char[] surface) throws IOException {
+  public List<Token> analyze(char[] surface, List<Token> reuse) throws IOException {
     Sentence sentence = new Sentence(surface);
     filterPreProcess(sentence);
     
-    List<Token> tokens = viterbi.getBestTokens(sentence);
+    List<Token> tokens = viterbi.getBestTokens(sentence, reuse);
     
     tokens = filterPostProcess(tokens);
     
     return tokens;
+  }
+  
+  /**
+   * @deprecated use {@link #analyze(char[], List)} instead.
+   */
+  @Deprecated
+  public List<Token> analyze(char[] surface) throws IOException {
+    return analyze(surface, new ArrayList<Token>());
   }
   
   /**
